--- a/.github/workflows/instal_build_run.yml
+++ b/.github/workflows/instal_build_run.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Set up Node.js version
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
             node-version: '12.x'
