--- a/.github/workflows/instal_build_run.yml
+++ b/.github/workflows/instal_build_run.yml
@@ -23,4 +23,4 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: tsc
-    - run: npm run start --if-present
+    - run: npm run start
