--- a/.github/workflows/instal_build_run.yml
+++ b/.github/workflows/instal_build_run.yml
@@ -1,26 +1,23 @@
+name: Install, build and run nodejs app
+ 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    branches: [ node-project ]
+ 
 jobs:
-  build:
-
+  deploy:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm install
-    - run: tsc
-    - run: npm run start
+      - uses: actions/checkout@master
+
+      - name: Set up Node.js version
+        uses: ./.github/actions/node.js
+        with:
+            node-version: '12.x'
+
+      - name: Perform install, build and start commands
+        run: |
+            npm install
+            tsc
+            npm run start --if-present
