--- a/.github/workflows/instal_build_run.yml
+++ b/.github/workflows/instal_build_run.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Set up Node.js version
-        uses: ./.github/workflows/instal_build_run.yml
+        uses: ./.github/workflows/node.js.yml
         with:
             node-version: '12.x'
 
