--- a/.github/workflows/instal_build_run.yml
+++ b/.github/workflows/instal_build_run.yml
@@ -1,22 +1,20 @@
-name: Install, build and run nodejs app
+name: Node.js CI
  
 on:
   push:
     branches: [ node-project ]
  
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [ '12', '14', '16' ]
-    name: Node ${{ matrix.node }} sample
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup node
+      - uses: actions/checkout@master
+
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+            node-version: '12.x'
 
       - name: Perform install, build and start commands
         run: |
