--- a/.github/workflows/instal_build_run.yml
+++ b/.github/workflows/instal_build_run.yml
@@ -9,12 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@master
-
-      - name: Set up Node.js version
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v3
         with:
-            node-version: '12.x'
+          node-version: ${{ matrix.node }}
 
       - name: Perform install, build and start commands
         run: |
